feat: Full integration of new algorithms and localization support
- Backend: Updated simulationController to support all new algorithms (LJF, HRRN, LRTF, MQ, MLFQ, PRIORITY_PE).
- Frontend: Expanded Comparison page to include all algorithms in side-by-side view.
- Localization: Added English and Spanish translations for all new algorithms.
- Quality: Fixed local URL references in Comparison page to use relative paths for production compatibility.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -29,7 +29,13 @@
       "SJF": "Shortest Job First (SJF - Non-Preemptive)",
       "SRTF": "Shortest Remaining Time First (SRTF - Preemptive)",
       "RR": "Round Robin (RR)",
-      "PRIORITY": "Priority (Non-Preemptive)"
+      "PRIORITY": "Priority (Non-Preemptive)",
+      "PRIORITY_PE": "Priority (Preemptive)",
+      "LJF": "Longest Job First (LJF - Non-Preemptive)",
+      "LRTF": "Longest Remaining Time First (LRTF - Preemptive)",
+      "HRRN": "Highest Response Ratio Next (HRRN)",
+      "MQ": "Multilevel Queue (MQ)",
+      "MLFQ": "Multilevel Feedback Queue (MLFQ)"
     }
   },
   "explainer": {
