fix(ui): add missing nav translation key and quantum label in comparison settings

--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -21,6 +21,7 @@
   "nav": {
     "playground": "Área de Pruebas",
     "compare": "Comparar",
+    "autoGrader": "Calificador Automático",
     "login": "Iniciar Sesión",
     "register": "Registrarse",
     "logout": "Cerrar Sesión"
