--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -14,6 +14,7 @@
   "nav": {
     "playground": "Playground",
     "compare": "Compare",
+    "autoGrader": "Auto-Grader",
     "login": "Login",
     "register": "Register",
     "logout": "Logout"
