fix(i18n): add missing loading/error keys to english locale

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,7 +9,9 @@
     "run": "Run Simulation",
     "ms": "ms",
     "watts": "W",
-    "joules": "J"
+    "joules": "J",
+    "loading": "Loading...",
+    "error": "Error"
   },
   "nav": {
     "playground": "Playground",
