feat: Add logo and About page, fix build errors
- Created new SVG logo in frontend/public/logo.svg
- Added About page with project details and algorithm list
- Updated Header to include About link and new logo
- Added route for /about in App.tsx
- Updated en/es locales
- Fixed unused imports in Modal.tsx and AutoGrader.tsx to pass build

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -19,7 +19,8 @@
     "autoGrader": "Auto-Grader",
     "login": "Login",
     "register": "Register",
-    "logout": "Logout"
+    "logout": "Logout",
+    "about": "About"
   },
   "controls": {
     "title": "Simulation Control",
