fix(frontend): resolve missing translations and synchronize locale files
- Fix 'nav.guide' raw key bug in English and Spanish locales
- Synchronize 'auth' and 'common' translation blocks across all 11 languages
- Ensure full key parity across all supported locales to prevent UI bugs
- Correct minor typos in English localization

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -16,7 +16,11 @@
     "delete": "حذف",
     "username": "اسم المستخدم",
     "saveChanges": "حفظ التغييرات",
-    "saving": "جاري الحفظ..."
+    "saving": "جاري الحفظ...",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "edit": "تعديل",
+    "close": "إغلاق"
   },
   "nav": {
     "playground": "ساحة التجربة",
@@ -90,6 +94,15 @@
     "active": "نشط",
     "idle": "خامل",
     "switches": "تبديلات السياق"
+  },
+  "auth": {
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "username": "اسم المستخدم",
+    "signIn": "تسجيل الدخول",
+    "signUp": "إنشاء حساب",
+    "noAccount": "ليس لديك حساب؟ أنشئ حساباً",
+    "hasAccount": "لديك حساب بالفعل؟ سجل دخولك"
   },
   "dashboard": {
     "title": "لوحة تحكم المستخدم",
