--- a/frontend/src/locales/hi.json
+++ b/frontend/src/locales/hi.json
@@ -16,7 +16,11 @@
     "delete": "मिटाएं",
     "username": "उपयोगकर्ता नाम",
     "saveChanges": "परिवर्तन सहेजें",
-    "saving": "सहेज रहा है..."
+    "saving": "सहेज रहा है...",
+    "save": "सहेजें",
+    "cancel": "रद्द करें",
+    "edit": "संपादित करें",
+    "close": "बंद करें"
   },
   "nav": {
     "playground": "प्लेग्राउंड",
@@ -90,6 +94,15 @@
     "active": "सक्रिय",
     "idle": "आइडल",
     "switches": "कॉन्टेक्स्ट स्विच"
+  },
+  "auth": {
+    "email": "ईमेल पता",
+    "password": "पासवर्ड",
+    "username": "उपयोगकर्ता नाम",
+    "signIn": "लॉग इन करें",
+    "signUp": "पंजीकरण करें",
+    "noAccount": "खाता नहीं है? पंजीकरण करें",
+    "hasAccount": "पहले से ही एक खाता है? लॉग इन करें"
   },
   "dashboard": {
     "title": "उपयोगकर्ता डैशबोर्ड",
