--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -37,6 +37,8 @@
     "title": "Simulation Control",
     "algorithm": "Algorithm",
     "quantum": "Time Quantum",
+    "randomSeed": "Random Seed",
+    "fairShareQuantum": "Fair-Share Quantum",
     "contextSwitch": "Context Switch",
     "cores": "Core Count",
     "optimize": "Optimize",
@@ -58,8 +60,12 @@
       "LJF": "Longest Job First (LJF - Non-Preemptive)",
       "LRTF": "Longest Remaining Time First (LRTF - Preemptive)",
       "HRRN": "Highest Response Ratio Next (HRRN)",
-      "MQ": "Multilevel Queue (MQ)",
-      "MLFQ": "Multilevel Feedback Queue (MLFQ)"
+      "MQ": "Multilevel Queue (MLQ)",
+      "MLFQ": "Multilevel Feedback Queue (MLFQ)",
+      "FAIR_SHARE": "Fair-Share Scheduling",
+      "LOTTERY": "Lottery Scheduling",
+      "EDF": "Earliest Deadline First (EDF)",
+      "RMS": "Rate-Monotonic Scheduling (RMS)"
     }
   },
   "explainer": {
@@ -93,7 +99,11 @@
       "io_heavy": "I/O Bound (Short Bursts)",
       "many_short": "Many Short Processes (Stress Test)",
       "long_running": "Long Running (Batch)",
-      "starvation": "Starvation Risk (Priority)"
+      "starvation": "Starvation Risk (Priority)",
+      "fair_share_groups": "Fair-Share Groups",
+      "lottery_weighted": "Lottery Weighted Tickets",
+      "edf_deadline_driven": "EDF Deadline Driven",
+      "rms_periodic": "RMS Periodic Tasks"
     },
     "success": "Processes generated"
   },
@@ -283,7 +293,7 @@
     }
   },
   "seo": {
-    "defaultDescription": "Quantix: A high-performance CPU scheduling visualizer supporting 11 algorithms, multi-core simulation, and detailed analytics.",
+    "defaultDescription": "Quantix: A high-performance CPU scheduling visualizer supporting 15 algorithms, multi-core simulation, and detailed analytics.",
     "home": {
       "title": "Quantix | CPU Scheduling Visualizer",
       "description": "Visualize and compare 11 CPU scheduling algorithms with multi-core support, energy modeling, and real-time Gantt charts."
